# fullstack-ml-ai-agent-skills

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
assets/templates/: Dockerfile.tmpl  README.md.tmpl  env.example.tmpl  python-version.tmpl  src_api_v1_health.py.tmpl  src_api_v1_router.py.tmpl  src_core_config.py.tmpl  src_core_logger_func.py.tmpl  src_services_clients_httpx.py.tmpl  tests_test_health.py.tmpl
references/: uv_notes.md
scripts/: audit_fastapi_project.py  scaffold_fastapi_uv.py
skills/dead-code-audit/: README.md  SKILL.md
skills/dead-code-audit/references/: base_dead_code_audit_prompt.md  dead_code_audit_prompt.md
skills/dead-code-audit/scripts/: update_dead_code_progress.py
skills/fastapi-architect/: README.md  SKILL.md
skills/fastapi-architect/references/: fastapi_notes.md
skills/fastapi-architect/scripts/: audit_fastapi_project.py  scaffold_fastapi_uv.py
skills/llm-evals-toolkit/: SKILL.md
skills/minimal-tests-audit/: README.md  SKILL.md
skills/minimal-tests-audit/references/: minimal_tests_prompt.md
skills/minimal-tests-audit/scripts/: apply_tests_from_progress.py  update_tests_progress.py
skills/mlops-blueprints/: SKILL.md
skills/python-best-practices/: SKILL.md
skills/python-best-practices/assets/: ruff_explain.md
skills/python-best-practices/references/: best_practices_checklist.md  oop_and_typing_patterns.md
skills/python-best-practices/scripts/: audit_python_project.py  render_pyproject.py
skills/ralph-codex/: README.md  SKILL.md
skills/repo-codebook-generator/: SKILL.md
(+27 files in other folders)
