[project]
name = "fullstack-ml-ai-agent-skills"
version = "0.1.0"
description = "Multi-skill repository for Codex CLI and Claude Code (FastAPI, Python, ML/AI, MLOps)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.13.0",
  "taskipy>=1.14.1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 121
exclude = [".venv", "__pycache__", ".git"]

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I", "UP", "B", "A", "C4", "T20", "SIM"]

[tool.taskipy.tasks]
lint = "ruff format --check . && ruff check ."
lint_fix = "ruff format . && ruff check --fix ."
format = "ruff format ."